fix sez1 spacing and position feat add border sez2

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@
 
 hr{
     max-width: 100px;
-    margin-top: 40px;
+    margin-top: 50px;
     margin-bottom: 50px;
 
 }
@@ -96,14 +96,15 @@ header a{
 #sez1 h1{
     font-size: 65px;
     padding-top: 100px;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
 }
+
 
 #sez2 h2,
 #sez5 h2,
 #sez6 h2{
     font-size: 35px;
-    padding-top: 150px;
+    padding-top: 60px;
     padding-bottom: 60px;
 }
 
@@ -228,18 +229,23 @@ ul{
 
 #sez1 .containerlarge{
     position: relative;
-    top: 100px;
+    top: 75px;
 }
 
 #sez1 .btnu{
-    margin: 40px 0px;
+    margin: 30px 0px;
     padding: 20px;
 }
 
 .freccia{
     font-size: 50px;
     position: absolute;
-    bottom: 120px;
+    bottom: 85px;
+}
+
+#sez2{
+    border-top: 1px solid #d0cfd4;
+    margin-top: 150px;
 }
 
 #sez2 input{
